PRND-90 #comment fix button z-index; match product page layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,6 +54,7 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 20;
 }
 
 .nav-main {
