--- a/app/assets/stylesheets/custom/_buttons.scss
+++ b/app/assets/stylesheets/custom/_buttons.scss
@@ -167,3 +167,8 @@
   padding-top: 15px !important;
   padding-bottom: 14px;
 }
+
+.btn--edit {
+  z-index: 10;
+  position: relative;
+}
